Fix layout shift because of speedlify component

--- a/src/assets/css/core/footer.css
+++ b/src/assets/css/core/footer.css
@@ -24,6 +24,12 @@
   box-shadow: none;
 }
 
+@media (orientation: portrait) {
+  .speedlify-container {
+    order: 1;
+  }
+}
+
 .speedlify-score {
   color: var(--text-color);
 }
